--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -2,7 +2,7 @@ name: Hourly time ping
 
 on:
   schedule:
-    - cron: "0 * * * *"   # כל שעה
+    - cron: "*/5 * * * *"   # כל שעה
   workflow_dispatch:      
 jobs:
   run-script:
