--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,7 +1,8 @@
 name: Hourly time ping
 on:
+  push
   schedule:
-    - cron: "0 * * * *"   # כל שעה
+    - cron: "*/5 * * * *"   # כל שעה
   workflow_dispatch:      
 jobs:
   run-script:
